--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>INSPIRE - Console</title>
+  <title>Inspire | Dashboard</title>
   <!-- <base href="/inspire/angular/master/"> -->
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
