--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbvyBxmMbFhrzP9Z8moyYr6dCr-pzjhBE"></script>
+  <!-- <script id="otpless-sdk" type="text/javascript" src="https://otpless.com/v4/auth.js" data-appid="Q2KO71NQOZN7YOF99KM7"></script> -->
 </head>
 
 <body>
